--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -38,7 +38,7 @@
             get_brands_ajax()
         });
         $(document).ajaxSuccess(function () {
-            initiate_page_options_refresh()
+            go_to_next_or_previous_question()
             refresh_page()
         })
         $('#next_btn').click(function () {
@@ -64,10 +64,23 @@
             refresh_page('next')
         });
 
-        function go_to_next_or_previous_question(answer) {
+        function go_to_next_or_previous_question(answer=undefined) {
             let current_question_id = $('input[name=first_question]').val()
 
-            if ((current_question_id - 1) == 8) {
+            if ((current_question_id) == 8) {
+                //question8
+                let brands = JSON.parse(localStorage.brands).brands
+                show_options(brands, 'brands')
+                let radiobuttnons = $('input[type=checkbox]')
+                radiobuttnons.on('change', function (e) {
+                    if ($('input[type=checkbox]:checked').length > 1) {
+                        $(this).prop('checked', false);
+                        alert('لطفا حداکثر یک برند را انتخاب کنید')
+                    }
+                });
+            }
+            else if ((current_question_id) == 9) {
+                //question9
                 let temp = save_answer(answer, 'A1')
                 let brands = JSON.parse(localStorage.brands).brands
                 if (answer != 99) {
@@ -84,15 +97,16 @@
                     }
                 }
                 show_options(brands, 'brands')
-
             }
-            else if ((current_question_id - 1) == 9) {
+            else if ((current_question_id) == 10) {
+                //question10
                 let temp = save_answer(answer, 'A2')
                 let A1 = JSON.parse(localStorage.A1)
                 $.extend(temp, A1)
                 show_options(temp, 'rest')
             }
-            else if ((current_question_id - 1) == 10) {
+            else if ((current_question_id) == 11) {
+                //question11
                 let temp = save_answer(answer, 'A4')
                 show_options(temp, 'rest')
                 let radiobuttnons = $('input[type=checkbox]')
@@ -103,11 +117,13 @@
                     }
                 });
             }
-            else if ((current_question_id - 1) == 11) {
+            else if ((current_question_id) == 12) {
+                //question12
                 let temp = save_answer(answer, 'A6')
                 show_options(temp, 'text')
             }
-            else if ((current_question_id - 1) == 12) {
+            else if ((current_question_id) == 13) {
+                //question13
                 let temp = save_answer(answer, 'A7')
                 let chart_data = []
                 let char_value = []
@@ -147,19 +163,23 @@
                     },
                 });
             }
-            else if ((current_question_id - 1) == 13) {
+            else if ((current_question_id) == 14) {
+                //question14
                 let temp = save_answer(answer, 'A8')
             }
-            else if ((current_question_id - 1) == 14) {
+            else if ((current_question_id) == 15) {
+                //question15
                 let temp = save_answer(answer, 'A9')
             }
-            else if ((current_question_id - 1) == 15) {
+            else if ((current_question_id) == 16) {
+                //question16
                 let temp = save_answer(answer, 'A10')
             }
-            else if ((current_question_id - 1) == 16) {
+            else if ((current_question_id) == 17) {
+                //question17
                 let temp = save_answer(answer, 'A11')
             }
-            else if ((current_question_id - 1) == 17) {
+            else if ((current_question_id) == 18) {//question18
                 let temp = save_answer(answer, 'A12')
             }
         }
@@ -180,18 +200,6 @@
                 dataType: "json",
                 success: function (response) {
                     localStorage.setItem('brands', JSON.stringify(response))
-                }
-            });
-        }
-
-        function initiate_page_options_refresh() {
-            let brands = JSON.parse(localStorage.brands).brands
-            show_options(brands, 'brands')
-            let radiobuttnons = $('input[type=checkbox]')
-            radiobuttnons.on('change', function (e) {
-                if ($('input[type=checkbox]:checked').length > 1) {
-                    $(this).prop('checked', false);
-                    alert('لطفا حداکثر یک برند را انتخاب کنید')
                 }
             });
         }
