--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -18,14 +18,10 @@
     <input type="hidden" value="{{ answersheet }}" name="answersheet">
     <input type="hidden" value="{{ last_question }}" name="last_question">
     <input type="hidden" value="{{ first_question }}" name="first_question">
-    {% for question in questions %}
-        <div class="questions" id="questions{{ question.pk }}">
-            <h4>{{ question }}</h4>
-        </div>
-    {% endfor %}
-            <div class="options" id="options">
-
-        </div>
+    <div class="questions" id="questions">
+    </div>
+    <div class="options" id="options">
+    </div>
     <button type="button" id="previous_btn" class="btn btn-primary btn-lg">قبل</button>
     <button type="button" id="next_btn" class="btn btn-primary btn-lg">بعد</button>
     <form method="post">
@@ -35,11 +31,12 @@
 {% endblock %}
 {% block js %}
     <script>
-            $(document).ready(function () {
-                get_brands()
-            });
+        let current_direction
+        $(document).ready(function () {
+            fetch_data_from_server()
+        });
 
-        function get_brands() {
+        function fetch_data_from_server() {
             $.ajax({
                 url: '{% url 'Survey:brand_list_ajax' %}',
                 dataType: "json",
@@ -47,11 +44,21 @@
                     localStorage.setItem('brands', JSON.stringify(response))
                 }
             });
+            let first_question = $('input[name=first_question]').val()
+            let data = {'first_question': first_question}
+            $.ajax({
+                url: '{% url 'Survey:question_list_ajax' %}',
+                dataType: "json",
+                data: data,
+                success: function (response) {
+                    localStorage.setItem('questions', JSON.stringify(response))
+                }
+            });
         }
 
         $(document).ajaxSuccess(function () {
-            go_to_next_or_previous_question('next')
-            refresh_page('next')
+            question_management('next')
+            paging('next')
             $('#previous_btn').addClass('hide')
         })
         $('#next_btn').click(function () {
@@ -71,35 +78,34 @@
             //بخش گزینه های سوال قبلی را پاک میکنم
             $('#options').html('')
             // به سوال بعدی بروم
-            go_to_next_or_previous_question('next', answer)
+            question_management('next', answer)
             //صفحه را refresh به بعد میکنم
-            refresh_page('next')
+            paging('next')
         });
 
         $('#previous_btn').click(function () {
-            let current_question_id = $('input[name=first_question]').val()
             //بخش گزینه های سوال قبلی را پاک میکنم
             $('#options').html('')
             //صفحه را refresh به قبل میکنم
-            refresh_page('previous')
+            paging('previous')
             // به سوال قبل بروم
-            go_to_next_or_previous_question('previous')
+            question_management('previous')
         });
 
-        function get_data(data) {
+        function get_data_localstorage(data) {
             return JSON.parse(localStorage.getItem(data))
         }
 
-        function go_to_next_or_previous_question(next_or_previous, answer = undefined) {
+        function question_management(next_or_previous, answer = undefined) {
             let current_question_id = $('input[name=first_question]').val()
 
             if ((current_question_id) == 8) {
                 //question8
                 if (next_or_previous == 'previous') {
-                    get_brands()
+                    fetch_data_from_server()
                 }
                 let brands = JSON.parse(localStorage.brands).brands
-                show_options(brands, 'brands')
+                options_show(brands, 'brands')
                 let radiobuttnons = $('input[type=checkbox]')
                 radiobuttnons.on('change', function (e) {
                     if ($('input[type=checkbox]:checked').length > 1) {
@@ -107,14 +113,13 @@
                         alert('لطفا حداکثر یک برند را انتخاب کنید')
                     }
                 });
-            }
-            else if ((current_question_id) == 9) {
+            } else if ((current_question_id) == 9) {
                 //question9
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A1')
+                    temp = set_data_localstorage(answer, 'A1')
                 } else {
-                    temp = get_data('A1')
+                    temp = get_data_localstorage('A1')
                 }
                 let brands = JSON.parse(localStorage.brands).brands
                 if (answer != 99) {
@@ -130,29 +135,27 @@
                         localStorage.setItem('brands', JSON.stringify(brands))
                     }
                 }
-                show_options(brands, 'brands')
-            }
-            else if ((current_question_id) == 10) {
+                options_show(brands, 'brands')
+            } else if ((current_question_id) == 10) {
                 //question10
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A2')
+                    temp = set_data_localstorage(answer, 'A2')
                     let A1 = JSON.parse(localStorage.A1)
                     $.extend(temp, A1)
                 } else {
-                    temp = get_data('A2')
+                    temp = get_data_localstorage('A2')
                 }
-                show_options(temp, 'rest')
-            }
-            else if ((current_question_id) == 11) {
+                options_show(temp, 'rest')
+            } else if ((current_question_id) == 11) {
                 //question11
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A4')
+                    temp = set_data_localstorage(answer, 'A4')
                 } else {
-                    temp = get_data('A4')
+                    temp = get_data_localstorage('A4')
                 }
-                show_options(temp, 'rest')
+                options_show(temp, 'rest')
                 let radiobuttnons = $('input[type=checkbox]')
                 radiobuttnons.on('change', function (e) {
                     if ($('input[type=checkbox]:checked').length > 3) {
@@ -160,24 +163,22 @@
                         alert('لطفا فقط 3 برند را انتخاب کنید')
                     }
                 });
-            }
-            else if ((current_question_id) == 12) {
+            } else if ((current_question_id) == 12) {
                 //question12
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A6')
+                    temp = set_data_localstorage(answer, 'A6')
                 } else {
-                    temp = get_data('A6')
+                    temp = get_data_localstorage('A6')
                 }
-                show_options(temp, 'text')
-            }
-            else if ((current_question_id) == 13) {
+                options_show(temp, 'text')
+            } else if ((current_question_id) == 13) {
                 //question13
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A7')
+                    temp = set_data_localstorage(answer, 'A7')
                 } else {
-                    temp = get_data('A7')
+                    temp = get_data_localstorage('A7')
                 }
                 let chart_data = []
                 let char_value = []
@@ -191,6 +192,7 @@
                 }
                 let result = '<div class="row"><div class="col-lg-2 col-md-2 col-sm-12 col-12"></div><div class="col-lg-8 col-md-8 col-sm-12 col-12"><canvas id="myChart" width="400" height="400"></canvas></div></div>'
                 $('#options').html(result)
+                questions_show()
                 var ctx = document.getElementById('myChart').getContext('2d');
                 var myChart = new Chart(ctx, {
                     type: 'pie',
@@ -213,66 +215,67 @@
                         }]
                     },
                 });
-            }
-            else if ((current_question_id) == 14) {
+            } else if ((current_question_id) == 14) {
                 //question14
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A8')
+                    temp = set_data_localstorage(answer, 'A8')
                 } else {
-                    temp = get_data('A8')
+                    temp = get_data_localstorage('A8')
                 }
-            }
-            else if ((current_question_id) == 15) {
+            } else if ((current_question_id) == 15) {
                 //question15
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A9')
+                    temp = set_data_localstorage(answer, 'A9')
                 } else {
-                    temp = get_data('A9')
+                    temp = get_data_localstorage('A9')
                 }
-            }
-            else if ((current_question_id) == 16) {
+            } else if ((current_question_id) == 16) {
                 //question16
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A10')
+                    temp = set_data_localstorage(answer, 'A10')
                 } else {
-                    temp = get_data('A10')
+                    temp = get_data_localstorage('A10')
                 }
-            }
-            else if ((current_question_id) == 17) {
+            } else if ((current_question_id) == 17) {
                 //question17
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A11')
+                    temp = set_data_localstorage(answer, 'A11')
                 } else {
-                    temp = get_data('A11')
+                    temp = get_data_localstorage('A11')
                 }
-            }
-            else if ((current_question_id) == 18) {
+            } else if ((current_question_id) == 18) {
                 //question18
                 let temp
                 if (next_or_previous == 'next') {
-                    temp = save_answer(answer, 'A12')
+                    temp = set_data_localstorage(answer, 'A12')
                 } else {
-                    temp = get_data('A12')
+                    temp = get_data_localstorage('A12')
                 }
             }
+            questions_show()
         }
 
-        function refresh_page(next_or_previous) {
+        function paging(next_or_previous) {
             let current_question_id = $('input[name=first_question]').val()
-            let current_question = $('#questions' + current_question_id)
-            let questions = $('.questions')
             let temp;
             if (next_or_previous == 'next') {
-                temp = parseInt(current_question_id) + 1
-                questions.addClass('hide')
-                current_question.removeClass('hide')
+                if (current_direction == 'previous') {
+                    temp = parseInt(current_question_id) + 2
+                } else {
+                    temp = parseInt(current_question_id) + 1
+                }
+                current_direction = 'next'
             } else if (next_or_previous == 'previous') {
+                if (current_direction == 'next') {
+                    temp = parseInt(current_question_id) - 2
+                } else {
                     temp = parseInt(current_question_id) - 1
-                current_question.removeClass('hide')
+                }
+                current_direction = 'previous'
             }
             if (temp == 8) {
                 $('#previous_btn').addClass('hide')
@@ -280,25 +283,37 @@
             $('input[name=first_question]').val(temp)
         }
 
-        function show_options(data, type) {
+        function options_show(data, type) {
             let result = ''
             if (type == 'brands') {
                 for (var i = 0; i < data.length; i++) {
-                    result += '<div class="row"><label><input type="checkbox" name="' + data[i].title + '" value="' + data[i].pk + '">&nbsp' + data[i].title + '</label></div>'
+                    result += '<div class="form-check"><label class="form-check-label" for="flexCheckDefault">' + data[i].title + '<input class="form-check-input" type="checkbox" value="' + data[i].pk + '" name="' + data[i].title + '" id="flexCheckDefault"></label></div>'
                 }
             } else if (type == 'rest') {
                 for (item in data) {
-                    result += '<div class="row"><label><input type="checkbox" name="' + item + '" value="' + data[item] + '">&nbsp' + item + '</label></div>'
+                    result += '<div class="form-check"><label class="form-check-label" for="flexCheckDefault">' + item + '<input class="form-check-input" type="checkbox" value="' + data[item] + '" name="' + item + '" id="flexCheckDefault"></label></div>'
                 }
             } else if (type == 'text') {
                 for (item in data) {
-                    result += '<div class="row">' + item + ': <label><input type="text" name="' + item + '" value=""></label></div>'
+                    result += '<div class="row">' + item + ': <label><input type="text" name="' + item + '" value="" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"></div></label></div>'
                 }
             }
             $('#options').html(result)
         }
 
-        function save_answer(answer, where) {
+        function questions_show() {
+            let current_question_id = $('input[name=first_question]').val()
+            let question = JSON.parse(localStorage.questions)
+            let question_title
+            for (q in question.questions) {
+                if (question.questions[q].pk == current_question_id) {
+                    question_title = question.questions[q].question_title
+                }
+            }
+            $('#questions').html(question_title)
+        }
+
+        function set_data_localstorage(answer, where) {
             let temp = {};
             for (var i = 0; i < answer.length; i++) {
                 if (answer[i].value != 99) {
