--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -22,7 +22,7 @@
     </div>
     <div class="options" id="options">
     </div>
-    <button type="button" id="previous_btn" class="btn btn-primary btn-lg">قبل</button>
+    <button type="button" id="previous_btn" class="hide btn btn-primary btn-lg">قبل</button>
     <button type="button" id="next_btn" class="btn btn-primary btn-lg">بعد</button>
     <form method="post">
         {% csrf_token %}
@@ -32,6 +32,14 @@
 {% block js %}
     <script>
         let current_direction
+        let next_btn = $('#next_btn')
+        let previous_btn = $('#previous_btn')
+        let options_html = $('#options')
+        let questions_html = $('#questions')
+        let current_question = parseInt($('input[name=first_question]').val())
+        let first_question = parseInt($('input[name=first_question]').val())
+        let last_question = parseInt($('input[name=last_question]').val())
+        let submit_btn = $('#submit')
         $(document).ready(function () {
             fetch_data_from_server()
         });
@@ -44,7 +52,6 @@
                     localStorage.setItem('brands', JSON.stringify(response))
                 }
             });
-            let first_question = $('input[name=first_question]').val()
             let data = {'first_question': first_question}
             $.ajax({
                 url: '{% url 'Survey:question_list_ajax' %}',
@@ -59,16 +66,13 @@
         $(document).ajaxSuccess(function () {
             question_management('next')
             paging('next')
-            $('#previous_btn').addClass('hide')
+            previous_btn.addClass('hide')
         })
-        $('#next_btn').click(function () {
-            $('#previous_btn').removeClass('hide')
-            let current_question_id = $('input[name=first_question]').val()
-            let last_question = $('input[name=last_question]').val()
+        next_btn.click(function () {
             //چک میکنم که به سوال آخر رسیدم submit کنم
-            if (parseInt(current_question_id) > parseInt(last_question)) {
-                $('#next_btn').addClass('hide')
-                $('#submit').removeClass('hide')
+            if (current_question > last_question) {
+                next_btn.addClass('hide')
+                submit_btn.removeClass('hide')
             }
             //checkbox های تیک خورده را پیدا میکنم
             let answer = document.querySelectorAll('input:checked')
@@ -77,15 +81,19 @@
             }
             //بخش گزینه های سوال قبلی را پاک میکنم
             $('#options').html('')
+            if (current_direction == 'previous') {
+                //صفحه را refresh به بعد میکنم
+                paging('next')
+            }
             // به سوال بعدی بروم
             question_management('next', answer)
             //صفحه را refresh به بعد میکنم
             paging('next')
         });
 
-        $('#previous_btn').click(function () {
+        previous_btn.click(function () {
             //بخش گزینه های سوال قبلی را پاک میکنم
-            $('#options').html('')
+            options_html.html('')
             //صفحه را refresh به قبل میکنم
             paging('previous')
             // به سوال قبل بروم
@@ -97,9 +105,8 @@
         }
 
         function question_management(next_or_previous, answer = undefined) {
-            let current_question_id = $('input[name=first_question]').val()
 
-            if ((current_question_id) == 8) {
+            if (current_question == 8) {
                 //question8
                 if (next_or_previous == 'previous') {
                     fetch_data_from_server()
@@ -113,7 +120,8 @@
                         alert('لطفا حداکثر یک برند را انتخاب کنید')
                     }
                 });
-            } else if ((current_question_id) == 9) {
+            }
+            else if (current_question == 9) {
                 //question9
                 let temp
                 if (next_or_previous == 'next') {
@@ -136,7 +144,8 @@
                     }
                 }
                 options_show(brands, 'brands')
-            } else if ((current_question_id) == 10) {
+            }
+            else if (current_question == 10) {
                 //question10
                 let temp
                 if (next_or_previous == 'next') {
@@ -147,7 +156,8 @@
                     temp = get_data_localstorage('A2')
                 }
                 options_show(temp, 'rest')
-            } else if ((current_question_id) == 11) {
+            }
+            else if (current_question == 11) {
                 //question11
                 let temp
                 if (next_or_previous == 'next') {
@@ -163,7 +173,8 @@
                         alert('لطفا فقط 3 برند را انتخاب کنید')
                     }
                 });
-            } else if ((current_question_id) == 12) {
+            }
+            else if (current_question == 12) {
                 //question12
                 let temp
                 if (next_or_previous == 'next') {
@@ -172,8 +183,10 @@
                     temp = get_data_localstorage('A6')
                 }
                 options_show(temp, 'text')
-            } else if ((current_question_id) == 13) {
+            }
+            else if (current_question == 13) {
                 //question13
+                previous_btn.removeClass('hide')
                 let temp
                 if (next_or_previous == 'next') {
                     temp = set_data_localstorage(answer, 'A7')
@@ -215,15 +228,18 @@
                         }]
                     },
                 });
-            } else if ((current_question_id) == 14) {
+            }
+            else if (current_question == 14) {
                 //question14
+                previous_btn.addClass('hide')
                 let temp
                 if (next_or_previous == 'next') {
                     temp = set_data_localstorage(answer, 'A8')
                 } else {
                     temp = get_data_localstorage('A8')
                 }
-            } else if ((current_question_id) == 15) {
+            }
+            else if (current_question == 15) {
                 //question15
                 let temp
                 if (next_or_previous == 'next') {
@@ -231,7 +247,8 @@
                 } else {
                     temp = get_data_localstorage('A9')
                 }
-            } else if ((current_question_id) == 16) {
+            }
+            else if (current_question == 16) {
                 //question16
                 let temp
                 if (next_or_previous == 'next') {
@@ -239,7 +256,8 @@
                 } else {
                     temp = get_data_localstorage('A10')
                 }
-            } else if ((current_question_id) == 17) {
+            }
+            else if (current_question == 17) {
                 //question17
                 let temp
                 if (next_or_previous == 'next') {
@@ -247,7 +265,8 @@
                 } else {
                     temp = get_data_localstorage('A11')
                 }
-            } else if ((current_question_id) == 18) {
+            }
+            else if (current_question == 18) {
                 //question18
                 let temp
                 if (next_or_previous == 'next') {
@@ -260,27 +279,24 @@
         }
 
         function paging(next_or_previous) {
-            let current_question_id = $('input[name=first_question]').val()
             let temp;
             if (next_or_previous == 'next') {
-                if (current_direction == 'previous') {
-                    temp = parseInt(current_question_id) + 2
-                } else {
-                    temp = parseInt(current_question_id) + 1
-                }
+                temp = current_question + 1
                 current_direction = 'next'
             } else if (next_or_previous == 'previous') {
                 if (current_direction == 'next') {
-                    temp = parseInt(current_question_id) - 2
+                    console.log('pre+2')
+                    temp = current_question - 2
                 } else {
-                    temp = parseInt(current_question_id) - 1
+                    console.log('pre+2')
+                    temp = current_question - 1
                 }
                 current_direction = 'previous'
             }
             if (temp == 8) {
-                $('#previous_btn').addClass('hide')
+                previous_btn.addClass('hide')
             }
-            $('input[name=first_question]').val(temp)
+            current_question = temp
         }
 
         function options_show(data, type) {
@@ -298,19 +314,18 @@
                     result += '<div class="row">' + item + ': <label><input type="text" name="' + item + '" value="" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"></div></label></div>'
                 }
             }
-            $('#options').html(result)
+            options_html.html(result)
         }
 
         function questions_show() {
-            let current_question_id = $('input[name=first_question]').val()
             let question = JSON.parse(localStorage.questions)
             let question_title
             for (q in question.questions) {
-                if (question.questions[q].pk == current_question_id) {
+                if (question.questions[q].pk == current_question) {
                     question_title = question.questions[q].question_title
                 }
             }
-            $('#questions').html(question_title)
+            questions_html.html(question_title)
         }
 
         function set_data_localstorage(answer, where) {
