--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -170,7 +170,7 @@
                 radiobuttnons.on('change', function (e) {
                     if ($('input[type=checkbox]:checked').length > 3) {
                         $(this).prop('checked', false);
-                        alert('لطفا فقط 3 برند را انتخاب کنید')
+                        alert('لطفا حداکثر 3 برند را انتخاب کنید')
                     }
                 });
             }
